@@ -4,6 +4,11 @@
 //
 //===========================================================================
 
+2nd December 2015 John Back
+    From LHCb, added EvtKStopizmumu model for KS -> pi0 mu mu decays based on
+    JHEP08(1998)004, courtesy of Veronika Chobanova, Diego Martinez Santos
+    and Jeremy Dalseno. Added EvtConst::Fermi for Fermi coupling constant.
+
 R01-05-00-------------------------------------------------------------------
 21st October 2015 John Back
     New tag incorporating all changes below. Recommended external packages
